Minor cleanup.